travel tarriff update

--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
                         <li><a>About</a></li>
                     </ul>
                     <ul class="me-nav">
-                        <li>
-                            <a href="tel:9600769625">96007 69625</a>
-                        </li>
-                        <li>
-                            <a href="mailto:mechetronz@yahoo.com">mechetronz@yahoo.com</a>
-                        </li>
+                        <li><a href="tel:9600769625">96007 69625</a></li>
+                        <li><a href="mailto:mechetronz@ymail.com">mechetronz@ymail.com</a></li>
                     </ul>
                 </nav>
             </div>
@@ -129,7 +125,7 @@
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt" style="height: 360px;">
                                         <div>
-                                            <h2 class="me-product__title">Innova <span>(7 seaters)</span></h2>
+                                            <h2 class="me-product__title">Innova <span>(8 seater)</span></h2>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -137,18 +133,18 @@
                                                     <div class="me-product__col">Non AC</div>
                                                 </div>
                                                 <div class="me-product__row">
-                                                    <div class="me-product__col">8 Hr / 80 KM</div>
-                                                    <div class="me-product__col">Rs.2300</div>
-                                                    <div class="me-product__col">Rs.2100</div>
+                                                    <div class="me-product__col">5 Hr / 50 KM</div>
+                                                    <div class="me-product__col">Rs.1400</div>
+                                                    <div class="me-product__col">Rs.1200</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra Hour</div>
-                                                    <div class="me-product__col">Rs.150</div>
-                                                    <div class="me-product__col">Rs.150</div>
+                                                    <div class="me-product__col">Rs.300</div>
+                                                    <div class="me-product__col">Rs.250</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra KM</div>
-                                                    <div class="me-product__col">Rs.12</div>
+                                                    <div class="me-product__col">Rs.14</div>
                                                     <div class="me-product__col">Rs.12</div>
                                                 </div>
                                             </div>
@@ -165,13 +161,13 @@
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Rate per KM</div>
-                                                    <div class="me-product__col">Rs. 12</div>
-                                                    <div class="me-product__col">Rs. 12</div>
+                                                    <div class="me-product__col">Rs.15</div>
+                                                    <div class="me-product__col">Rs.13</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Driver Bata</div>
-                                                    <div class="me-product__col">Rs.300</div>
-                                                    <div class="me-product__col">Rs.300</div>
+                                                    <div class="me-product__col">Rs.400</div>
+                                                    <div class="me-product__col">Rs.400</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -185,7 +181,7 @@
                                 <div class="me-product">
                                     <div class="me-product__content" style="height: 360px;">
                                         <div>
-                                            <h2 class="me-product__title">Tavera <span>(9 seaters)</span></h2>
+                                            <h2 class="me-product__title">Tavera <span>(9 seater)</span></h2>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -193,19 +189,19 @@
                                                     <div class="me-product__col">Non AC</div>
                                                 </div>
                                                 <div class="me-product__row">
-                                                    <div class="me-product__col">8 Hr / 80 KM</div>
-                                                    <div class="me-product__col">Rs.2300</div>
-                                                    <div class="me-product__col">Rs.2000</div>
+                                                    <div class="me-product__col">5 Hr / 50 KM</div>
+                                                    <div class="me-product__col">Rs.1200</div>
+                                                    <div class="me-product__col">Rs.1000</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra Hour</div>
-                                                    <div class="me-product__col">Rs.150</div>
-                                                    <div class="me-product__col">Rs.150</div>
+                                                    <div class="me-product__col">Rs.250</div>
+                                                    <div class="me-product__col">Rs.200</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra KM</div>
                                                     <div class="me-product__col">Rs.12</div>
-                                                    <div class="me-product__col">Rs.11</div>
+                                                    <div class="me-product__col">Rs.10</div>
                                                 </div>
                                             </div>
                                             <div class="me-product__table">
@@ -221,13 +217,13 @@
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Rate per KM</div>
-                                                    <div class="me-product__col">Rs. 12</div>
-                                                    <div class="me-product__col">Rs. 11</div>
+                                                    <div class="me-product__col">Rs.13</div>
+                                                    <div class="me-product__col">Rs.11</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Driver Bata</div>
-                                                    <div class="me-product__col">Rs.300</div>
-                                                    <div class="me-product__col">Rs.300</div>
+                                                    <div class="me-product__col">Rs.400</div>
+                                                    <div class="me-product__col">Rs.400</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -241,7 +237,7 @@
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt" style="height: 360px;">
                                         <div>
-                                            <h2 class="me-product__title">Force <span>(12 seaters)</span></h2>
+                                            <h2 class="me-product__title">Force <span>(12 seater)</span></h2>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -249,19 +245,19 @@
                                                     <div class="me-product__col">Non AC</div>
                                                 </div>
                                                 <div class="me-product__row">
-                                                    <div class="me-product__col">8 Hr / 80 KM</div>
-                                                    <div class="me-product__col">Rs.3000</div>
-                                                    <div class="me-product__col">Rs.2700</div>
+                                                    <div class="me-product__col">5 Hr / 50 KM</div>
+                                                    <div class="me-product__col">Rs.1700</div>
+                                                    <div class="me-product__col">Rs.1400</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra Hour</div>
-                                                    <div class="me-product__col">Rs.250</div>
-                                                    <div class="me-product__col">Rs.200</div>
+                                                    <div class="me-product__col">Rs.350</div>
+                                                    <div class="me-product__col">Rs.300</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Extra KM</div>
-                                                    <div class="me-product__col">Rs.15</div>
-                                                    <div class="me-product__col">Rs.13</div>
+                                                    <div class="me-product__col">Rs.17</div>
+                                                    <div class="me-product__col">Rs.14</div>
                                                 </div>
                                             </div>
                                             <div class="me-product__table">
@@ -277,13 +273,13 @@
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Rate per KM</div>
-                                                    <div class="me-product__col">Rs. 15</div>
-                                                    <div class="me-product__col">Rs. 13</div>
+                                                    <div class="me-product__col">Rs.16</div>
+                                                    <div class="me-product__col">Rs.14</div>
                                                 </div>
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Driver Bata</div>
-                                                    <div class="me-product__col">Rs.350</div>
-                                                    <div class="me-product__col">Rs.350</div>
+                                                    <div class="me-product__col">Rs.500</div>
+                                                    <div class="me-product__col">Rs.500</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -318,7 +314,7 @@
                     <div class="me-footer__col">
                         <div>
                             <p><a href="tel:9600769625">96007 69625</a></p>
-                            <p><a href="mailto:mechetronz@yahoo.com">mechetronz@yahoo.com</a></p>
+                            <p><a href="mailto:mechetronz@ymail.com">mechetronz@ymail.com</a></p>
                         </div>
                     </div>
                 </div>
