--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
                     <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
-                    <a href="#safety-gloves" class="me-banner__launch">Goto Products &rarr;</a>
+                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup" target="_blank">Get enquiry &rarr;</a> 
+                    <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 </section>
             </div>
         </div>
@@ -60,22 +61,22 @@
                                 <div class="me-product">
                                     <div class="me-product__content">
                                         <div>
-                                            <h2 class="me-product__title">Drivers Gloves</h2>
-                                            Available in all natural cowhide, pigskin, goatskin, or deerskin, Galeton drivers gloves provide a great balance of protection and dexterity.
+                                            <h2 class="me-product__title">Cotton Knitted Gloves</h2>
+                                            Multi-colours with excellent quality of different weights like 40, 50, 60 and 70 grams/pair.
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/exp/01.jpg);"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-knitted.jpg);"></div>
                                 </div>
                             </li>
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content">
                                         <div>
-                                            <h2 class="me-product__title">Leather Palm Gloves</h2>
-                                            Leather Palm Work Gloves protect your hands while you work on the toughest jobs.
+                                            <h2 class="me-product__title">Cotton Canvas Gloves</h2>
+                                            Rough area application this 14" gloves offers good protection.
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/exp/02.jpg);"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-canvas.jpg);"></div>
                                 </div>
                             </li>
                         </ul>
@@ -84,22 +85,25 @@
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt">
                                         <div>
-                                            <h2 class="me-product__title">Premium Leather Glove</h2>
-                                            Our selection of Economy Leather Palm Gloves have various cuff styles and options such as insulated.
+                                            <h2 class="me-product__title">Finger Cots</h2>
+                                            Fingertips clean and protected while working in pastel or charcoal, etc.,<br> Anti-static also available which can be used in electronics application.
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/exp/03.jpg);"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/finger-cots.jpg);"></div>
                                 </div>
                             </li>
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt">
                                         <div>
-                                            <h2 class="me-product__title">Economy Leather Palm Gloves</h2>
-                                            Galeton understands how important it is to protect your workers with the strongest.
+                                            <h2 class="me-product__title">Banian waste</h2>
+                                            &mdash; Mixed color waste<br>
+                                            &mdash; Pure White Baniyan Waste<br>
+                                            &mdash; Mixed baniyan yarn waste<br>
+                                            &mdash; Pure white baniyan yarn waste<br>
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/exp/04.jpg);"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/banianyarn.jpg);"></div>
                                 </div>
                             </li>
                         </ul>
@@ -292,7 +296,7 @@
                 </section>
             </div>
         </div>
-        <div class="me-footer">
+        <footer class="me-footer">
             <div class="me-container">
                 <div class="me-footer__row">
                     <div class="me-footer__col" style="flex:1.5;">
@@ -306,20 +310,21 @@
                     </div>
                     <div class="me-footer__col">
                         <address>
-                            11 A, Kamaraj Nagar<br>
-                            Madukarai<br>
+                            01, First cross, Indira nagar, <br>
+                            Madukarai.<br>
                             Puducherry - 605105
                         </address>
                     </div>
                     <div class="me-footer__col">
                         <div>
-                            <p><a href="tel:9600769625">96007 69625</a></p>
                             <p><a href="mailto:mechetronz@ymail.com">mechetronz@ymail.com</a></p>
+                            <p><a href="tel:9600769625">96007 69625</a></p>
+                            <p><a href="tel:7812036876">78120 36876</a></p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
         <!-- javascript -->
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/app.js"></script>
