--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
                     <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
-                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup" target="_blank">Get enquiry &rarr;</a> 
+                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a> 
                     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 </section>
             </div>
