site responsive to devices

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 </div>
                 <nav class="me-header__nav">
                     <ul class="me-nav">
-                        <li><a>Safety Product</a></li>
+                        <li><a href="#safety-product">Safety Product</a></li>
                         <li class="me-nav__inner"><a>Transport Service</a>
                             <ul>
-                                <li><a>Innova</a></li>
-                                <li><a>Tavera</a></li>
-                                <li><a>Force</a></li>
+                                <li><a href="#vehicle-innova">Innova</a></li>
+                                <li><a href="#vehicle-tavera">Tavera</a></li>
+                                <li><a href="#vehicle-force">Force</a></li>
                             </ul>
                         </li>
-                        <li><a>About</a></li>
+                        <li><a href="#about">About</a></li>
                     </ul>
                     <ul class="me-nav">
                         <li><a href="tel:9600769625">96007 69625</a></li>
@@ -39,22 +39,18 @@
         <div class="me-banner">
             <div class="me-container">
                 <section class="me-banner__content">
-                    <p class="me-banner__title">
-                        Protect what's important.
-                    </p>
+                    <p class="me-banner__title">Protect what's important.</p>
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
                     <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
-                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a> 
+                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a>
                     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 </section>
             </div>
         </div>
-        <div class="me-section me-section--pull">
+        <div class="me-section me-section--pull" id="safety-product">
             <div class="me-container">
                 <section>
-                    <!-- <h1 class="me-section__title">Safety Gloves</h1>
- -->
                     <div class="me-products">
                         <ul>
                             <li>
@@ -124,7 +120,7 @@
                 <section>
                     <h1 class="me-section__title">Vehicles</h1>
                     <div class="me-products">
-                        <ul class="alt">
+                        <ul class="alt" id="vehicle-innova">
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt" style="height: 360px;">
@@ -180,7 +176,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <ul>
+                        <ul id="vehicle-tavera">
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content" style="height: 360px;">
@@ -236,7 +232,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <ul class="alt">
+                        <ul class="alt" id="vehicle-force">
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt" style="height: 360px;">
@@ -296,7 +292,7 @@
                 </section>
             </div>
         </div>
-        <footer class="me-footer">
+        <footer class="me-footer" id="about">
             <div class="me-container">
                 <div class="me-footer__row">
                     <div class="me-footer__col" style="flex:1.5;">
