--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             <div class="me-container">
                 <section>
                     <h1 class="me-section__title">Vehicles</h1>
-                    <div class="me-products">
+                    <div class="me-products me-products--alt">
                         <ul class="alt" id="vehicle-innova">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content me-product__content--alt" style="height: 360px;">
+                                    <div class="me-product__content me-product__content--alt">
                                         <div>
                                             <h2 class="me-product__title">Innova <span>(8 seater)</span></h2>
                                             <div class="me-product__table">
@@ -179,7 +179,7 @@
                         <ul id="vehicle-tavera">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 360px;">
+                                    <div class="me-product__content">
                                         <div>
                                             <h2 class="me-product__title">Tavera <span>(9 seater)</span></h2>
                                             <div class="me-product__table">
@@ -235,7 +235,7 @@
                         <ul class="alt" id="vehicle-force">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content me-product__content--alt" style="height: 360px;">
+                                    <div class="me-product__content me-product__content--alt">
                                         <div>
                                             <h2 class="me-product__title">Force <span>(12 seater)</span></h2>
                                             <div class="me-product__table">
@@ -296,7 +296,7 @@
             <div class="me-container">
                 <div class="me-footer__row">
                     <div class="me-footer__col" style="flex:1.5;">
-                        <div><img src="assets/images/brand/mechetronz-white.svg" width="100" alt="mechetronz"></div>
+                        <div><img src="assets/images/brand/mechetronz-white.svg" class="me-footer__logo" width="120" alt="mechetronz"></div>
                         <br>
                         <p>&mdash; Leading safety solutions in the marketplace today.</p>
                         <p>&mdash;  Our core mission is to help safety managers.</p>
