--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
                     <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
-                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a>
-                    <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a>                    
                 </section>
             </div>
         </div>
@@ -289,6 +288,15 @@
                             </li>
                         </ul>
                     </div>
+                </section>
+            </div>
+        </div>
+        <div class="me-section me-section--push" style="background-color: #ddd;">
+            <div class="me-container">
+                <section>
+                    <h1 class="me-section__title">
+                        <a class="typeform-share link" style="color:currentColor;" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get product enquiry &rarr;</a>
+                    </h1>
                 </section>
             </div>
         </div>
