--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <ul>
                                 <li><a href="#vehicle-innova">Innova</a></li>
                                 <li><a href="#vehicle-tavera">Tavera</a></li>
-                                <li><a href="#vehicle-force">Force</a></li>
+                                <li><a href="#vehicle-tempo-traveller">Tempo Traveller</a></li>
                             </ul>
                         </li>
                         <li><a href="#about">About</a></li>
@@ -231,12 +231,12 @@
                                 </div>
                             </li>
                         </ul>
-                        <ul class="alt" id="vehicle-force">
+                        <ul class="alt" id="vehicle-tempo-traveller">
                             <li>
                                 <div class="me-product">
                                     <div class="me-product__content me-product__content--alt">
                                         <div>
-                                            <h2 class="me-product__title">Force <span>(12 seater)</span></h2>
+                                            <h2 class="me-product__title">Tempo Traveller <span>(12 seater)</span></h2>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -294,7 +294,7 @@
         <div class="me-section me-section--push" style="background-color: #ddd;">
             <div class="me-container">
                 <section>
-                    <h1 class="me-section__title">
+                    <h1 class="me-section__title" style="margin-bottom: 0">
                         <a class="typeform-share link" style="color:currentColor;" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get product enquiry &rarr;</a>
                     </h1>
                 </section>
